# DriftCatcher

./: .dockerignore  .gitignore  AGENTIC_ARCHITECTURE.md  DVC_IMPLEMENTATION_SUMMARY.md  README.md  drift_feature_psi.json  main.py  pyproject.toml  regenerate_stats.py  sample_baseline.py
agent/: AgenticReasoningEngine.py  PlanningAgent.py  agent_state.json  retrain_agent.py  view_logs.py
agent/logs/: planning_executions.jsonl  planning_plans.jsonl  reasoning_decisions.jsonl
api/: main.py  test_api.py
config/: __init__.py  dataset_config.py
dashboard/: app.py
data/: baseline.csv.dvc
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.dashboard  Dockerfile.mlflow  docker-compose.yml
docs/: AGENTIC_ARCHITECTURE.md  DVC_VERSIONING.md  DVC_WORKFLOW_DIAGRAM.md  LOW_LEVEL_DESIGN.md  MLFLOW_LOGGING.md  MONITORING_WORKFLOW.md
monitoring/: drift_detector.py  performance_monitor.py
preprocessing/: __init__.py  create_holdout.py  universal_loader.py
scratchwork/: brain_dump.md  scratch.ipynb
tools/: __init__.py
training/: sanity_check.py  train.py  train_simple.py  train_universal.py
