[project]
name = "driftcatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "fastapi>=0.128.2",
    "ipykernel>=7.1.0",
    "mlflow>=2.18",
    "numpy>=2.4.2",
    "pandas<3.0",
    "protobuf>=3.20,<5",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
